feat(backend): refresh token logic (#130)
* feat(backend): refresh token logic added

* fix(frontend): temporary removed remember me button
